--- a/css/theme/sky.css
+++ b/css/theme/sky.css
@@ -57,8 +57,6 @@ body {
  * LINKS
  *********************************************/
 .reveal a:not(.image) {
-  color: #3b759e;
-  text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   -ms-transition: color .15s ease;
@@ -66,9 +64,7 @@ body {
   transition: color .15s ease; }
 
 .reveal a:not(.image):hover {
-  color: #74a7cb;
-  text-shadow: none;
-  border: none; }
+  color: #848484;
 
 .reveal .roll span:after {
   color: #fff;
